--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -11,13 +11,13 @@
     }
 
     .mainServices {
-        @include grid-set (main,grid,1rem, 1rem);
-        grid-template-columns: 3fr 3fr;
-        grid-template-rows: 3fr 3fr;
-        justify-content:center space-between;
+        @include grid-set (main,grid,0.5rem, 0.5rem);
+        grid-template-areas: "eventKids eventCattering"
+            "eventCorporative eventCattering";
+        justify-content: center;
+        justify-items: center;
         align-items: center;
-        grid-row-gap: 30px;
-        grid-column-gap: 30px;
+        gap: 0.5rem;
     }
 
     .mainGallery {
@@ -45,12 +45,11 @@
 
     .mainServices {
         @include grid-set (main,grid,1rem, 1rem);
-        grid-template-columns: 3fr 3fr 3fr 3fr;
-        grid-template-rows: 3fr;
-        justify-content:center space-between;
+        grid-template-areas: "eventKids eventCorporative eventCattering";
+        justify-content: center;
+        justify-items: center;
         align-items: center;
-        grid-row-gap: 30px;
-        grid-column-gap: 30px;
+        gap: 0.2rem;
     }
 
     .mainGallery {
