--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -94,7 +94,7 @@ p {
 
 .eventCorporative .eventImage,
 .eventCorporative .eventImage--hover {
-    background-image: url('../img/boda.jpg');
+    background-image: url('../img/corporativo.jpg');
 }
 
 .eventCattering .eventImage,
@@ -102,6 +102,10 @@ p {
     background-image: url('../img/catering.jpg');
 }
 
+.eventBodas .eventImage,
+.eventBodas .eventImage--hover {
+    background-image: url('../img/boda.jpg');
+}
 .eventImage {
     visibility: hidden;
     background-size: cover;
