--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -6,8 +6,9 @@ $sizeFontLogo:20px;
 //Menu
 $colorPrincipalMenu: #42C2FF;
 $colorSecundarioMenu: #94bbe9;
-$sizeFontMenu:20px;
-$colorFontMenu:whitesmoke;
+$sizeFontMenu:16px;
+$colorFontMenu: black;
+$colorFontMenuHover:whitesmoke;
 $colorSubmenu:#42C2FF;
 $linearGradientMenu:0deg;
 
