--- a/css/main.css
+++ b/css/main.css
@@ -358,8 +358,12 @@ p {
 .mainContact {
   grid-area: main;
   display: flex;
+  margin: 1rem;
+  padding: 1rem;
+  display: flex;
   align-content: center;
-  justify-content: center; }
+  justify-content: center;
+  background-color: red; }
 
 .formulario {
   margin: 0.2rem;
