--- a/css/main.css
+++ b/css/main.css
@@ -362,8 +362,7 @@ p {
   padding: 1rem;
   display: flex;
   align-content: center;
-  justify-content: center;
-  background-color: red; }
+  justify-content: center; }
 
 .formulario {
   margin: 0.2rem;
