--- a/css/main.css
+++ b/css/main.css
@@ -357,7 +357,6 @@ p {
 /*Formulario*/
 .mainContact {
   grid-area: main;
-  display: flex;
   margin: 1rem;
   padding: 1rem;
   display: flex;
@@ -372,6 +371,8 @@ p {
 /**********************************************************/
 /*MEDIA QUERY*/
 @media screen and (min-width: 720px) {
+  .menu {
+    font-size: 18px; }
   .mainAboutUs {
     grid-area: main;
     display: grid;
@@ -403,6 +404,8 @@ p {
     display: none; } }
 
 @media screen and (min-width: 1360px) {
+  .menu {
+    font-size: 20px; }
   .mainAboutUs {
     grid-area: main;
     display: grid;
